unpackaged/main/default/objects/npe4__Relationship__c/fields/Created_From_FellowApp__c.field-meta.xml
<CustomField>
    <fullName>Created_From_FellowApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created From FellowApp</label>
    <type>Checkbox</type>
</CustomField>