unpackaged/main/default/objects/npe4__Relationship__c/fields/Education_Concentration_2__c.field-meta.xml
<CustomField>
    <fullName>Education_Concentration_2__c</fullName>
    <label>Education Concentration 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Animal Science</fullName>
            </value>
            <value>
                <fullName>Anthropology</fullName>
            </value>
            <value>
                <fullName>Archaeology</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Art</fullName>
            </value>
            <value>
                <fullName>Art History</fullName>
            </value>
            <value>
                <fullName>Astronomy</fullName>
            </value>
            <value>
                <fullName>Biochemistry</fullName>
            </value>
            <value>
                <fullName>Biology</fullName>
            </value>
            <value>
                <fullName>Biophysics</fullName>
            </value>
            <value>
                <fullName>Biotechnology</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>Classical Studies</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Computer Science</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Criminal Justice</fullName>
            </value>
            <value>
                <fullName>Criminology</fullName>
            </value>
            <value>
                <fullName>Culinary Arts</fullName>
            </value>
            <value>
                <fullName>Dentistry</fullName>
            </value>
            <value>
                <fullName>Ecology</fullName>
            </value>
            <value>
                <fullName>Economics</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Environmental Science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>