unpackaged/main/default/objects/npe4__Relationship__c/fields/Education_Degree__c.field-meta.xml
<CustomField>
    <fullName>Education_Degree__c</fullName>
    <label>Education Degree</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BA - Bachelor of Arts</fullName>
            </value>
            <value>
                <fullName>BFA - Bachelor in Fine Arts</fullName>
            </value>
            <value>
                <fullName>BS - Bachelor of Science</fullName>
            </value>
            <value>
                <fullName>EdD - Doctorate in Education</fullName>
            </value>
            <value>
                <fullName>Hon – Honorary</fullName>
            </value>
            <value>
                <fullName>JD - Juris Doctor</fullName>
            </value>
            <value>
                <fullName>LLB - Bachelor of Laws</fullName>
            </value>
            <value>
                <fullName>MA - Master of Arts</fullName>
            </value>
            <value>
                <fullName>MBA - Master of Business Administration</fullName>
            </value>
            <value>
                <fullName>MD - Doctor of Medicine</fullName>
            </value>
            <value>
                <fullName>MDiv - Master of Divinity</fullName>
            </value>
            <value>
                <fullName>MEng - Master in Engineering</fullName>
            </value>
            <value>
                <fullName>MFA - Master in Fine Arts</fullName>
            </value>
            <value>
                <fullName>MS - Master of Science</fullName>
            </value>
            <value>
                <fullName>PhD - Doctorate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>