unpackaged/main/default/objects/npe4__Relationship__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>