unpackaged/main/default/objects/npe4__Relationship__c/fields/Key_Relationship_First__c.field-meta.xml
<CustomField>
    <fullName>Key_Relationship_First__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Relationship First</label>
    <type>Checkbox</type>
</CustomField>