unpackaged/main/default/objects/npe4__Relationship__c/fields/npe4__RelatedContact__c.field-meta.xml
<CustomField>
    <fullName>npe4__RelatedContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hidden Relationships List</relationshipLabel>
    <relationshipName>Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>