unpackaged/main/default/objects/npe4__Relationship__c/fields/npe4__Relationship_Explanation__c.field-meta.xml
<CustomField>
    <fullName>npe4__Relationship_Explanation__c</fullName>
    <description>Text formula that constructs a sentence explaining the relationship between the two Contacts</description>
    <formula>TEXT(npe4__RelatedContact__r.Salutation) + " " + npe4__RelatedContact__r.FirstName + " " + npe4__RelatedContact__r.LastName
+ "  "  +  $Label.npe4__Relationship_Explanation_Connector + " " + 
TEXT(npe4__Contact__r.Salutation) + " " + npe4__Contact__r.FirstName + " " + npe4__Contact__r.LastName + "'s " + TEXT(npe4__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Text formula that constructs a sentence explaining the relationship between the two Contacts</inlineHelpText>
    <label>Relationship Explanation</label>
    <type>Text</type>
</CustomField>