unpackaged/main/default/objects/npe4__Relationship__c/fields/npe4__SYSTEM_SystemCreated__c.field-meta.xml
<CustomField>
    <fullName>npe4__SYSTEM_SystemCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System field that indicates if this Relationship was created automatically as the reciprocal to another Relationships.</description>
    <inlineHelpText>System field that indicates if this Relationship was created automatically as the reciprocal to another Relationships.</inlineHelpText>
    <label>_SYSTEM: SystemCreated</label>
    <type>Checkbox</type>
</CustomField>