unpackaged/main/default/objects/npe4__Relationship__c/fields/npe4__Type__c.field-meta.xml
<CustomField>
    <fullName>npe4__Type__c</fullName>
    <description>Field that describes how the Related Contact is connected to the Contact.</description>
    <inlineHelpText>Field that describes how the Related Contact is connected to the Contact.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aunt or Uncle</fullName>
            </value>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Campaign Prospect</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Child-In-Law</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Co-worker</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Cousin</fullName>
            </value>
            <value>
                <fullName>Domestic Partner</fullName>
            </value>
            <value>
                <fullName>EDF Strategic Partner</fullName>
            </value>
            <value>
                <fullName>EDF Strategic Partner Solicitor</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>God Child</fullName>
            </value>
            <value>
                <fullName>Godparent</fullName>
            </value>
            <value>
                <fullName>Grandchild</fullName>
            </value>
            <value>
                <fullName>Grandchild-In-Law</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>Grandparent-In-Law</fullName>
            </value>
            <value>
                <fullName>Great Grandchild</fullName>
            </value>
            <value>
                <fullName>Great Grandparent</fullName>
            </value>
            <value>
                <fullName>Knows</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Neighbor</fullName>
            </value>
            <value>
                <fullName>Nephew or Niece</fullName>
            </value>
            <value>
                <fullName>PFF - Campaign Prospect</fullName>
            </value>
            <value>
                <fullName>PFF - Campaign Volunteer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>