unpackaged/main/default/objects/npe4__Relationship__c/fields/Political_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Political_Contribution__c</fullName>
    <label>Political Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>