unpackaged/main/default/objects/npe4__Relationship__c/fields/Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Id__c</fullName>
    <description>Created this as a part Heller Data Mirgration 2021.</description>
    <label>Source Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>