unpackaged/main/default/objects/npe4__Relationship__c/fields/Spouse_Domestic_Partner__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Domestic_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spouse/Domestic Partner</label>
    <type>Checkbox</type>
</CustomField>