unpackaged/main/default/objects/npe4__Relationship__c/validationRules/npe4__Related_Contact_Do_Not_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>npe4__Related_Contact_Do_Not_Change</fullName>
    <active>true</active>
    <description>Do not allow user to change Related Contact value as it damages the paired relationship data</description>
    <errorConditionFormula>and(not( ISNEW()), ISCHANGED( npe4__RelatedContact__c ))</errorConditionFormula>
    <errorDisplayField>npe4__RelatedContact__c</errorDisplayField>
    <errorMessage>Rather than change the contacts in an existing relationship, delete this relationship and create a new on between the new contacts</errorMessage>
</ValidationRule>